# GOL_EVENTS_PROV2.1

./: .gitignore  CMakeLists.txt  CMakePresets.json  GuideEditor.py  README.md  README_CPP.md  apply_generated_images.py  build_and_run.ps1  build_error.txt  build_error_final.txt  build_error_utf8.txt  build_fail.txt  build_log.txt  build_log_check.txt  clean_fail.txt  clean_log.txt  config_error.txt  config_log.txt  current_build_log.txt  decrypt_url_test.py  decrypted.txt  decrypted_url.txt  dump_pdf.py  encrypt_tool.py  encrypted_output.txt  error_log_v9.txt  final_build.bat  fix_mw.py  force_build.bat  full_build_log.txt  generate_guides.py  keys.JSON  package_app.ps1  preset_log.txt  push_update.ps1  report_final.txt  report_output_v2.txt  run_guide_editor.bat  secret.txt  test_report.json  (+4 more)
2026.01.14 Inter vs Lecce/: report.txt
2026.01.25 Roma vs Milan/: report.txt
Release_Package_v2.3.1/resources/: app_icon.rc  style.qss
Release_Package_v2.3.2/resources/: resources.qrc
Release_Package_v2.3.3/resources/: sector_db.json
assets/guides/Calcul_stock/: 1_txt.txt  2_txt.txt
assets/guides/Check_listing/: 1_txt.txt  2_txt.txt
assets/guides/check_price/: 1_txt.txt  2_txt.txt
assets/guides/daily_report/: 1_txt.txt  2_txt.txt
assets/guides/expander_seats/: 1_txt.txt  2_txt.txt
assets/guides/pdfs_to_txt/: 1_txt.txt  2_txt.txt
assets/guides/placeholder/: 1_txt.txt  2_txt.txt
assets/guides/qr_generator/: 1_txt.txt  2_txt.txt
assets/guides/renamer_fv/: 1_txt.txt  2_txt.txt
assets/guides/splitter_renamer/: 1_txt.txt  2_txt.txt
assets/guides/stock_report/: 1_txt.txt  2_txt.txt  3_txt.txt
assets/guides/verify_orders/: 1_txt.txt  2_txt.txt
cmake/: Findlibqrencode.cmake
legacy_python/: compile_scripts.py  encrypt.py  generate_stock_report.py  main.py  test_app.py
legacy_python/scripts/: Calcul_stock.py  Check_listing.py  check_price.py  expander_seats.py  pdfs_to_TXT.py  placeholder.py  qr_generator.py  renamer_fv.py  splitter_renamer.py  verify_orders.py
src/: AdminPanel.cpp  AdminPanel.h  AnimatedBackground.cpp  AnimatedBackground.h  AuthManager.cpp  AuthManager.h  CosmicDialog.cpp  CosmicDialog.h  FlowLayout.cpp  GuideDialog.cpp  GuideDialog.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  NotificationIsland.cpp  NotificationIsland.h  SecurityManager.cpp  SecurityManager.h  SettingsPage.cpp  SettingsPage.h  ToolCard.cpp  ToolCard.h  UpdateChecker.cpp  UpdateChecker.h  Utils.cpp  Utils.h  main.cpp
src/tools/: CalcStock.cpp  CalcStock.h  CheckListing.cpp  CheckListing.h  CheckPrice.cpp  CheckPrice.h  CheckPrice_old.cpp  DailyReport.cpp  DailyReport.h  ExpanderSeats.cpp  ExpanderSeats.h  PdfsToTxt.cpp  PdfsToTxt.h  Placeholder.cpp  Placeholder.h  QrGenerator.cpp  QrGenerator.h  RenamerFv.cpp  RenamerFv.h  SplitterRenamer.cpp  SplitterRenamer.h  StockReport.cpp  StockReport.h  VerifyOrders.cpp  VerifyOrders.h
